js/js.translator/testData/incremental/invalidation/jsModuleAnnotation/lib1/ObjectA.kt
@file:JsNonModule
@file:JsModule("lib1")
external open class ObjectA {
    open var callable: (a: Any, b: Any, c: Any, d: dynamic, e: Any, f: Any) -> Unit
}
